[ci] Cleanup some wrapper object creations